# myproj.cc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/lib/: CMakeLists.txt
src/lib/lib1/: CMakeLists.txt  myclass.cc  myclass.hh
src/lib/lib1/tests/: mytest.cc
